--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,7 @@ script:
 deploy:
   provider: releases
     api_key: $GITHUB_OAUTH_TOKEN
+    file: README.md
     skip_cleanup: true
     on:
       tags: true
